Fixed errors caused when no img is uploaded, and text-wrapping

--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -79,12 +79,14 @@ body {
     font-family: 'Inconsolata', monospace;
     font-weight: 700;
     font-size: 30px;
+    word-wrap: break-word;
 }
 
 .cards-body {
     font-family: 'Inconsolata', monospace;
     font-weight: 400;
     font-size: 18px;
+    word-wrap: break-word;
 }
 
 
@@ -98,3 +100,23 @@ body {
     color: rgb(101, 55, 109);
 }
 
+.images {
+    max-width: 450px;
+    max-height: 450px;
+    display: block;
+    margin: 0 auto 40px;
+}
+
+@media only screen and (max-width: 500px) {
+    .images {
+        max-width: 350px;
+        max-height: 350px;
+        display: block;
+        margin: 0 auto 40px;
+    }
+}
+
+.container {
+    max-width: 100%;
+    word-wrap: break-word;
+}
